route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mysite
spec:
  host: mysite-test.apps-crc.testing
  port:
    targetPort: 80
  to:
    kind: Service
    name: mysite
    weight: 100
  wildcardPolicy: None
